[package]
name = "ssh-fetch-keys"
description = "An AuthorizedKeysCommand for openssh that retrieves and caches your public keys from online accounts such as GitHub"
repository = "https://github.com/scottcwang/ssh-fetch-keys/"
version = "0.1.0"
authors = ["Scott C Wang <wangsc@cs.wisc.edu>"]
edition = "2018"
license = "MIT"
keywords = ["ssh", "key"]
categories = ["caching", "authentication", "cryptography", "network-programming", "config"]

[dependencies]
users = "0.11"
regex = "1.5"
curl = "0.4"
crc = "2.1"
anyhow = "1.0"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
clap = "2.34"
mockall = "0.11"
