[package]
name = "ssh-fetch-keys"
description = "An AuthorizedKeysCommand for openssh that retrieves and caches your public keys from online accounts such as GitHub"
repository = "https://github.com/scottcwang/ssh-fetch-keys/"
version = "0.2.0"
authors = ["Scott C Wang <wangsc@cs.wisc.edu>"]
edition = "2018"
license = "MIT"
keywords = ["ssh", "key"]
categories = ["caching", "authentication", "cryptography", "network-programming", "config"]

[dependencies]
users = "0.11"
regex = "1.8"
curl = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
crc = "3.0"
anyhow = "1.0"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.2", features = ["derive"] }
clap-verbosity-flag = "2.0"
mockall = "0.11"
