[package]
name = "ssh-fetch-keys"
description = "An AuthorizedKeysCommand for openssh that retrieves and caches your public keys from online accounts such as GitHub"
repository = "https://github.com/scottcwang/ssh-fetch-keys/"
version = "0.3.0"
authors = ["Scott C Wang <wangsc@cs.wisc.edu>"]
edition = "2021"
license = "MIT"
keywords = ["ssh", "key"]
categories = ["caching", "authentication", "cryptography", "network-programming", "config"]

[features]
default = ["reqwest"]

[dependencies]
uzers = "0.11"
regex = "1.10"
url = "2.4"
curl = { version = "0.4", optional = true }
reqwest = { version = "0.11", features = ["blocking"], optional = true }
crc = "3.0"
anyhow = "1.0"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
clap-verbosity-flag = "2.1"

[dev-dependencies]
mockall = "0.11"
test-log = "0.2"
